crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__number.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: "42"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Number(
        NumberLit {
            value: 42.0,
            text: "42",
        },
    ),
}
