crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__pin_access.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: ^user.id
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Pin(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            value: Access {
                record: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: Var(
                        "user",
                    ),
                },
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: "id",
                },
            },
        },
    ),
}
