crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__pin_call.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: ^f(x)
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Pin(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Var(
                        "f",
                    ),
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 5,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                ],
            },
        },
    ),
}
