crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__string.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: "\"hello\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Str(
        "hello",
    ),
}
