crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__variable.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: foo
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Var(
        "foo",
    ),
}
