crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__wildcard.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: _
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 2,
        },
    },
    value: Anything,
}
